[package]
name = "key-list"
version = "1.0.0"
authors = ["Poly <0x20fa@gmail.com>"]
edition = "2018"

documentation = "https://docs.rs/key-list"
homepage = "https://github.com/0x20F/key-list"
repository = "https://github.com/0x20F/key-list"
readme = "README.md"

keywords = [ "list", "keys", "substring", "fast", "minimal" ]
categories = [ "parsing", "text-processing" ]


description = "A very minimal crate to get you a specific sequence between two characters in a string, fast."

license = "MIT"

exclude = [
    "tests/*",
    ".github/*"
]
